--- a/Cleardesk AI/Server/package.json
+++ b/Cleardesk AI/Server/package.json
@@ -10,7 +10,9 @@
   "author": "P",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.896.0",
+    "@aws-sdk/client-dynamodb": "^3.899.0",
+    "@aws-sdk/lib-dynamodb": "^3.899.0",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
