--- a/Cleardesk AI/Server/package.json
+++ b/Cleardesk AI/Server/package.json
@@ -14,8 +14,10 @@
     "@aws-sdk/lib-dynamodb": "^3.899.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "path": "^0.12.7"
   }
