--- a/Cleardesk AI/Server/package.json
+++ b/Cleardesk AI/Server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.899.0",
+    "@aws-sdk/client-s3": "^3.901.0",
     "@aws-sdk/lib-dynamodb": "^3.899.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
