--- a/Cleardesk_AI/Server/package.json
+++ b/Cleardesk_AI/Server/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-dynamodb": "^3.899.0",
     "@aws-sdk/client-s3": "^3.901.0",
     "@aws-sdk/lib-dynamodb": "^3.899.0",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
