--- a/Cleardesk_AI/Server/package.json
+++ b/Cleardesk_AI/Server/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.899.0",
-    "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/client-s3": "^3.908.0",
+    "@aws-sdk/client-sqs": "^3.908.0",
     "@aws-sdk/lib-dynamodb": "^3.899.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
