--- a/Cleardesk_AI/Server/package.json
+++ b/Cleardesk_AI/Server/package.json
@@ -22,6 +22,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^13.0.0"
   }
 }
